add qc and daymet eda

--- a/degree_days/orchestrate_degree_days.ipynb
+++ b/degree_days/orchestrate_degree_days.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "5eb9870f-fbf9-453e-b985-6ffc679ab07a",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "aa920513-af00-43dc-a8c9-226508f20fb0",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "cd911350-99ac-4559-ada3-d7a8bb804677",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "58a15069-6509-43d0-b2fd-d1a5029afa1e",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "fdf8c53b",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "6ba5883d-9734-4b22-9733-8ecb7f8fab1f",
    "metadata": {},
    "outputs": [],
@@ -127,41 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "226c68fb-16c7-4afc-a3e4-223c6fd9f64a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Task was destroyed but it is pending!\n",
-      "task: <Task pending name='Task-2676574' coro=<RequestHandler._execute() running at /home/UA/cparr4/miniconda3/envs/snap-geo/lib/python3.9/site-packages/tornado/web.py:1713> wait_for=<Future pending cb=[<TaskWakeupMethWrapper object at 0x7f191f203310>()]> cb=[_HandlerDelegate.execute.<locals>.<lambda>() at /home/UA/cparr4/miniconda3/envs/snap-geo/lib/python3.9/site-packages/tornado/web.py:2361]>\n",
-      "Task was destroyed but it is pending!\n",
-      "task: <Task pending name='Task-627162' coro=<RequestHandler._execute() running at /home/UA/cparr4/miniconda3/envs/snap-geo/lib/python3.9/site-packages/tornado/web.py:1713> wait_for=<Future pending cb=[<TaskWakeupMethWrapper object at 0x7f18f4afc610>()]> cb=[_HandlerDelegate.execute.<locals>.<lambda>() at /home/UA/cparr4/miniconda3/envs/snap-geo/lib/python3.9/site-packages/tornado/web.py:2361]>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#next step something like\n",
     "client = Client()\n",
     "\n",
-    "_ = dask.compute(*[dask.delayed(reproject.reproject_raster)(f, \"ncar_12km\") for f in geotiff_fps])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "4010d92a-0365-4755-95cf-f3c7c5b07ae3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "_ = dask.compute(*[dask.delayed(reproject.reproject_raster)(f, \"ncar_12km\") for f in geotiff_fps])\n",
+    "\n",
     "client.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "95ffa509-9b11-498e-a918-b82e207c2e65",
    "metadata": {},
    "outputs": [],
