--- a/degree_days/orchestrate_degree_days.ipynb
+++ b/degree_days/orchestrate_degree_days.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5eb9870f-fbf9-453e-b985-6ffc679ab07a",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cd911350-99ac-4559-ada3-d7a8bb804677",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "58a15069-6509-43d0-b2fd-d1a5029afa1e",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6ba5883d-9734-4b22-9733-8ecb7f8fab1f",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "226c68fb-16c7-4afc-a3e4-223c6fd9f64a",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "95ffa509-9b11-498e-a918-b82e207c2e65",
    "metadata": {},
    "outputs": [],
@@ -153,8 +153,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2b90db15-ce98-4356-8f76-7140d845ccdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/atlas_scratch/cparr4/degree_days_ncar_12km/reprojected_geotiffs/ncar_12km_MRI-CGCM3_rcp85_air_thawing_index_2016_Fdays.tif')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reproj_geotiff_fps[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db0d07c1-e012-4187-8910-1817b1ed78a2",
    "metadata": {},
    "outputs": [],
    "source": []
