more file stat stuff

--- a/arctic_rivers/eda.ipynb
+++ b/arctic_rivers/eda.ipynb
@@ -31,6 +31,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Data package"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Looks like all files are netCDFs:"
    ]
   },
@@ -94,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -108,9 +115,9 @@
     }
    ],
    "source": [
-    "years, models, variables = zip(*[fp.name.split(\".\")[0].split(\"_\") for fp in fps])\n",
-    "models = list(set(models))\n",
-    "variables = list(set(variables))\n",
+    "years, models_, variables_ = zip(*[fp.name.split(\".\")[0].split(\"_\") for fp in fps])\n",
+    "models = list(set(models_))\n",
+    "variables = list(set(variables_))\n",
     "print(f\"year -- first year: {min(years)}, last year: {max(years)}\")\n",
     "print(f\"models: {sorted(set(models))}\")\n",
     "print(f\"scenarios: {set(variables)}\")"
@@ -414,25 +421,280 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "What about represnetation of models / vairable groups in the dataset?"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>File count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>hC2LE4</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>hC2LE7</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>hC2LE9</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>fC2LE7</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>fC2LE4</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>hC2LE2</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>fPGWh</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>historical</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>fC2LE9</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>fPGWm</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>fC2LE2</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Model  File count\n",
+       "0       hC2LE4          96\n",
+       "1       hC2LE7          96\n",
+       "2       hC2LE9          96\n",
+       "3       fC2LE7          96\n",
+       "4       fC2LE4          96\n",
+       "5       hC2LE2          96\n",
+       "6        fPGWh          96\n",
+       "7   historical          96\n",
+       "8       fC2LE9          96\n",
+       "9        fPGWm          96\n",
+       "10      fC2LE2          96"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_models, counts = np.unique(models_, return_counts=True)\n",
+    "pd.DataFrame({\"Model\": models, \"File count\": counts})"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Variable group</th>\n",
+       "      <th>File count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Q</td>\n",
+       "      <td>352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>WT</td>\n",
+       "      <td>352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>climate</td>\n",
+       "      <td>352</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Variable group  File count\n",
+       "0              Q         352\n",
+       "1             WT         352\n",
+       "2        climate         352"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_groups, counts = np.unique(variables_, return_counts=True)\n",
+    "pd.DataFrame({\"Variable group\": unique_groups, \"File count\": counts})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## File structure\n",
+    "\n",
+    "From above, it looks like most files are of similar sizes within variable group and across models. So let's have a look at a file from each variable group. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File /beegfs/CMIP6/arctic-cmip6/Arctic_Rivers_Data/2034_fPGWh_Q.nc\n",
+      "<xarray.Dataset> Size: 50MB\n",
+      "Dimensions:          (time: 365, seg: 34346)\n",
+      "Coordinates:\n",
+      "  * time             (time) datetime64[ns] 3kB 2034-01-01T12:00:00 ... 2034-1...\n",
+      "  * seg              (seg) int64 275kB 81009065 81010344 ... 81019848 81019993\n",
+      "Data variables:\n",
+      "    IRFroutedRunoff  (time, seg) float32 50MB ...\n",
+      "Attributes:\n",
+      "    version:  v1.2.1\n",
+      "\n",
+      "---------------------------------\n",
+      "\n",
+      "File /beegfs/CMIP6/arctic-cmip6/Arctic_Rivers_Data/2034_fPGWh_WT.nc\n",
+      "<xarray.Dataset> Size: 600MB\n",
+      "Dimensions:      (time: 365, no_seg: 2, hru: 34208)\n",
+      "Coordinates:\n",
+      "  * time         (time) datetime64[ns] 3kB 2034-01-01 2034-01-02 ... 2034-12-31\n",
+      "  * no_seg       (no_seg) int32 8B 1 2\n",
+      "  * hru          (hru) float64 274kB 8.1e+07 8.1e+07 8.1e+07 ... 8.1e+07 8.1e+07\n",
+      "Data variables:\n",
+      "    T_stream     (time, no_seg, hru) float64 200MB ...\n",
+      "    T_air        (time, no_seg, hru) float64 200MB ...\n",
+      "    T_headwater  (time, no_seg, hru) float64 200MB ...\n",
+      "\n",
+      "---------------------------------\n",
+      "\n",
+      "File /beegfs/CMIP6/arctic-cmip6/Arctic_Rivers_Data/2034_fPGWh_climate.nc\n",
+      "<xarray.Dataset> Size: 4GB\n",
+      "Dimensions:        (time: 365, hist_interval: 2, lon: 782, lat: 662)\n",
+      "Coordinates:\n",
+      "  * time           (time) datetime64[ns] 3kB 2034-01-02 ... 2035-01-01\n",
+      "  * lon            (lon) float32 3kB 184.2 184.3 184.3 ... 225.7 225.7 225.8\n",
+      "  * lat            (lat) float32 3kB 50.01 50.04 50.07 ... 69.83 69.86 69.89\n",
+      "Dimensions without coordinates: hist_interval\n",
+      "Data variables:\n",
+      "    time_bounds    (time, hist_interval) datetime64[ns] 6kB ...\n",
+      "    H2OSNO         (time, lat, lon) float32 756MB ...\n",
+      "    QFLX_EVAP_TOT  (time, lat, lon) float32 756MB ...\n",
+      "    RAIN           (time, lat, lon) float32 756MB ...\n",
+      "    SNOW           (time, lat, lon) float32 756MB ...\n",
+      "    TSA            (time, lat, lon) float32 756MB ...\n",
+      "Attributes: (12/39)\n",
+      "    title:                                     CLM History file information\n",
+      "    comment:                                   NOTE: None of the variables ar...\n",
+      "    Conventions:                               CF-1.0\n",
+      "    history:                                   Sat May 18 12:36:10 2024: ncrc...\n",
+      "    source:                                    Community Terrestrial Systems ...\n",
+      "    hostname:                                  cheyenne\n",
+      "    ...                                        ...\n",
+      "    ctype_urban_impervious_road:               74\n",
+      "    ctype_urban_pervious_road:                 75\n",
+      "    cft_c3_crop:                               1\n",
+      "    cft_c3_irrigated:                          2\n",
+      "    time_period_freq:                          day_1\n",
+      "    NCO:                                       netCDF Operators version 5.1.9...\n",
+      "\n",
+      "---------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tmp_fps = sorted([fp for fp in fps if \"fPGWh\" in fp.name])[:3]\n",
+    "for fp in tmp_fps:\n",
+    "    print(\"File\", fp)\n",
+    "    print(xr.open_dataset(fp), end=\"\\n\\n---------------------------------\\n\\n\")"
+   ]
   },
   {
    "cell_type": "code",
