--- a/landfast_sea_ice/curate.ipynb
+++ b/landfast_sea_ice/curate.ipynb
@@ -8,114 +8,141 @@
     "## Data Preprocessing\n",
     "\n",
     "We'll start with the Beaufort dataset as we have better confidence that this dataset is complete.\n",
-    "The basics here are to rename the data and to reproject them."
+    "The basics here are to rename the data and to reproject them with the parameters examined in the `daily_eda` notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "192c609a-bc9a-4ed9-9750-a4a497ef2f50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "import rasterio as rio\n",
+    "import matplotlib.pyplot as plt\n",
+    "import dask\n",
+    "import dask.distributed as dd\n",
+    "\n",
+    "import eda as eda\n",
+    "import preprocess as preprocess\n",
+    "from luts import ice_zones, ice_years, data_sources\n",
+    "from config import INPUT_DIR, DAILY_BEAUFORT_DIR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bc1202be-f855-49a8-b63d-31754c879b26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Beau']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ice_zones[0:1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "1ebb8f00-c28e-400f-b828-dce8088f53b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7797\n"
+     ]
+    }
+   ],
    "source": [
-    "geotiffs_to_ingest = []\n",
-    "metas = []\n",
+    "beauf_geotiffs = []\n",
     "\n",
-    "for region in ice_zones:\n",
+    "for region in ice_zones[0:1]: # just remove list indexing to include Chukchi later\n",
     "    for year in ice_years:\n",
-    "        target = Path(INPUT_FLAT_DIR / \"EM24\" / region / year)\n",
+    "        target = Path(INPUT_DIR / region / year)\n",
     "        tiffs = eda.list_geotiffs(target, str_to_match=\"dailyslie\")\n",
-    "        _, meta = eda.fetch_all_geotiff_metadata(target, str_to_match=\"dailyslie\")\n",
-    "        geotiffs_to_ingest = geotiffs_to_ingest + tiffs\n",
-    "        metas = metas + meta\n",
-    "print(len(geotiffs_to_ingest))\n",
-    "geotiffs_to_ingest[0]"
+    "        beauf_geotiffs = beauf_geotiffs + tiffs\n",
+    "print(len(beauf_geotiffs))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8a09f5a1-417d-425d-8d24-62bb0abb9abf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/beegfs/CMIP6/cparr4/landfast_sea_ice_products/Beaufort_Daily/beaufort_19970414_radarsat_slie.tif')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def rename(fp):\n",
-    "    if \"Chuk\" == fp.parent.parent.name:\n",
-    "        zone = \"Chukchi\"\n",
-    "        out_dir = DAILY_CHUKCHI_DIR\n",
-    "    elif \"Beau\" == fp.parent.parent.name:\n",
-    "        zone = \"Beaufort\"\n",
-    "        out_dir = DAILY_BEAUFORT_DIR\n",
-    "    else:\n",
-    "        print(fp)\n",
-    "    \n",
-    "    fname = fp.name\n",
-    "    yyyymmdd = fname.split(\"_\")[0][1:]\n",
-    "\n",
-    "    data_source_indicator = fname[0]\n",
-    "    source_str = data_sources[data_source_indicator].lower().replace(\" \", \"_\")\n",
-    "\n",
-    "    new_name = f\"{zone.lower()}_{yyyymmdd}_{source_str}_slie.tif\"\n",
-    "    new_fp = out_dir / new_name\n",
-    "    return new_fp\n",
-    "\n",
-    "rename(geotiffs_to_ingest[0])"
+    "# example of the renaming function, mostly just placing the product in the output directory and then also expanding the data source attribute\n",
+    "preprocess.rename(beauf_geotiffs[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d4cbd07b-9d8c-40df-9ce9-90f163ff49ab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def reproject_raster(file):\n",
-    "\n",
-    "    dst_crs = rio.crs.CRS.from_epsg(3338)\n",
-    "\n",
-    "    with rio.open(file) as src:\n",
-    "\n",
-    "        # compute the new affine transformation, width and height\n",
-    "        warp_transform, width, height = rio.warp.calculate_default_transform(\n",
-    "            src.crs, dst_crs, src.width, src.height, *src.bounds)\n",
-    "        # define the output raster profile\n",
-    "        out_profile = src.profile.copy()\n",
-    "        out_profile.update(\n",
-    "            {\n",
-    "                \"crs\": dst_crs,\n",
-    "                \"transform\": warp_transform,\n",
-    "                \"width\": width,\n",
-    "                \"height\": height,\n",
-    "                \"bounds\": array_bounds(height, width, warp_transform),\n",
-    "            }\n",
-    "        )\n",
-    "\n",
-    "        # create the new raster file\n",
-    "        out_file = rename(file)\n",
-    "        \n",
-    "        with rio.open(out_file, \"w\", **out_profile) as dst:\n",
-    "            # reproject the input raster data\n",
-    "            rio.warp.reproject(\n",
-    "                source=src.read(1),\n",
-    "                destination=rio.band(dst, 1),\n",
-    "                src_transform=src.transform,\n",
-    "                src_crs=src.crs,\n",
-    "                dst_transform=warp_transform,\n",
-    "                dst_crs=dst_crs,\n",
-    "                resampling=Resampling.nearest,  # NN is default, but explicit here for easy change or experimentation later\n",
-    "            )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "28a40817-5c20-4f2d-bf7e-d79af312db79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for tiff in geotiffs_to_ingest:\n",
-    "    reproject_raster(tiff)"
+    "client = dd.Client()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a2f16277-9662-4822-85e9-7201d5ac8dca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = dask.compute(*[dask.delayed(preprocess.tap_reproject_raster)(f) for f in beauf_geotiffs])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "78d28d35-8a74-4454-b674-58a9bd9e7a66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1bb28b40-0b06-45d2-9ccc-8d073e0597cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(eda.list_geotiffs(DAILY_BEAUFORT_DIR)) == len(beauf_geotiffs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "895c341f-942b-4e29-988e-ee6d0ed16b54",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
