dailies and tap reproj for mmm

--- a/landfast_sea_ice/curate.ipynb
+++ b/landfast_sea_ice/curate.ipynb
@@ -7,8 +7,7 @@
    "source": [
     "## Data Preprocessing\n",
     "\n",
-    "We'll start with the Beaufort dataset as we have better confidence that this dataset is complete.\n",
-    "The basics here are to rename the data and to reproject them with the parameters examined in the `daily_eda` notebook."
+    "All that is happening here is prescribing new file name conventions and also reprojecting thee data with the parameters examined in the `daily_eda` notebook."
    ]
   },
   {
@@ -28,30 +27,33 @@
     "import eda as eda\n",
     "import preprocess as preprocess\n",
     "from luts import ice_zones, ice_years, data_sources\n",
-    "from config import INPUT_DIR, DAILY_BEAUFORT_DIR"
+    "from config import INPUT_DIR, DAILY_BEAUFORT_DIR, DAILY_CHUKCHI_DIR"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bc1202be-f855-49a8-b63d-31754c879b26",
+   "id": "c8812197-9393-4a3f-b959-7fd7fb3b6d05",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Beau']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['Beau', 'Chuk']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(ice_zones[0:1])"
+    "ice_zones"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "1ebb8f00-c28e-400f-b828-dce8088f53b3",
    "metadata": {},
    "outputs": [
@@ -66,7 +68,7 @@
    "source": [
     "beauf_geotiffs = []\n",
     "\n",
-    "for region in ice_zones[0:1]: # just remove list indexing to include Chukchi later\n",
+    "for region in ice_zones[0:1]:\n",
     "    for year in ice_years:\n",
     "        target = Path(INPUT_DIR / region / year)\n",
     "        tiffs = eda.list_geotiffs(target, str_to_match=\"dailyslie\")\n",
@@ -76,29 +78,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "8a09f5a1-417d-425d-8d24-62bb0abb9abf",
+   "execution_count": 3,
+   "id": "f0eee5ff-1aca-4e7b-a94b-26bb0caca3b2",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "PosixPath('/beegfs/CMIP6/cparr4/landfast_sea_ice_products/Beaufort_Daily/beaufort_19970414_radarsat_slie.tif')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7668\n"
+     ]
     }
    ],
    "source": [
-    "# example of the renaming function, mostly just placing the product in the output directory and then also expanding the data source attribute\n",
-    "preprocess.rename(beauf_geotiffs[0])"
+    "chuk_geotiffs = []\n",
+    "\n",
+    "for region in ice_zones[1:]:\n",
+    "    for year in ice_years:\n",
+    "        target = Path(INPUT_DIR / region / year)\n",
+    "        tiffs = eda.list_geotiffs(target, str_to_match=\"dailyslie\")\n",
+    "        chuk_geotiffs = chuk_geotiffs + tiffs\n",
+    "print(len(chuk_geotiffs))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "id": "8a09f5a1-417d-425d-8d24-62bb0abb9abf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/beegfs/CMIP6/cparr4/landfast_sea_ice_products/Beaufort_Daily/beaufort_19970414_radarsat_slie.tif\n",
+      "/beegfs/CMIP6/cparr4/landfast_sea_ice_products/Chukchi_Daily/chukchi_20230323_asip_slie.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example of the renaming function, mostly just placing the product in the output directory and then also expanding the data source attribute\n",
+    "print(preprocess.rename(beauf_geotiffs[0]))\n",
+    "print(preprocess.rename(chuk_geotiffs[-1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "28a40817-5c20-4f2d-bf7e-d79af312db79",
    "metadata": {},
    "outputs": [],
@@ -108,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "a2f16277-9662-4822-85e9-7201d5ac8dca",
    "metadata": {},
    "outputs": [],
@@ -118,7 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
+   "id": "d9af411a-9c8f-4219-b7f0-c5705b895120",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = dask.compute(*[dask.delayed(preprocess.tap_reproject_raster)(f) for f in chuk_geotiffs])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "78d28d35-8a74-4454-b674-58a9bd9e7a66",
    "metadata": {},
    "outputs": [],
@@ -128,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "1bb28b40-0b06-45d2-9ccc-8d073e0597cc",
    "metadata": {},
    "outputs": [],
@@ -138,8 +174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "895c341f-942b-4e29-988e-ee6d0ed16b54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(eda.list_geotiffs(DAILY_CHUKCHI_DIR)) == len(chuk_geotiffs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e9954a1-9d13-47c6-8c64-65e375642708",
    "metadata": {},
    "outputs": [],
    "source": []
